--- a/k8s/clusters/sidero/manifests/default/sidero/environments/default.yaml
+++ b/k8s/clusters/sidero/manifests/default/sidero/environments/default.yaml
@@ -22,6 +22,6 @@ spec:
       - pti=on
       - random.trust_cpu=on
       - slab_nomerge=
-      - talos.config=http://sidero.${HARDWARE_DOMAIN}:8081/configdata?uuid=
+      - talos.config=http://sidero.holthome.net:8081/configdata?uuid=
       - talos.platform=metal
     url: https://github.com/talos-systems/talos/releases/download/v0.14.0/vmlinuz-amd64
