--- a/k8s/clusters/sidero/manifests/default/sidero/servers/cp-0.yaml
+++ b/k8s/clusters/sidero/manifests/default/sidero/servers/cp-0.yaml
@@ -10,16 +10,15 @@ spec:
   configPatches:
     - op: replace
       path: /machine/install/disk
-      value: /dev/sda
-  # cpu:
-  #   manufacturer: Intel(R) Corporation
-  #   version: Intel(R) Core(TM) i3-6100T CPU @ 3.20GHz
+      value: /dev/vda
+
+  cpu:
+    manufacturer: Intel(R) Corporation
+    version: Intel(R) Core(TM) i3-7100 CPU @ 3.90GHz
   hostname: cp-0
   pxeBootAlways: true
   system:
-    family: ThinkCentre M900
-    manufacturer: LENOVO
-    productName: 10FLS22400
-    serialNumber: S4AQ2662
-    skuNumber: LENOVO_MT_10FL_BU_LENOVO_FM_ThinkCentre M900
-    version: ThinkCentre M900
+    productName: BHYVE
+    serialNumber: None
+    skuNumber: None
+    version: "1.0"
