--- a/k8s/clusters/sidero/manifests/default/sidero/serverclasses/cluster-0-control-plane.yaml
+++ b/k8s/clusters/sidero/manifests/default/sidero/serverclasses/cluster-0-control-plane.yaml
@@ -45,11 +45,10 @@ spec:
           - 10.20.0.1
 
     - op: add
-      path: /machine/network
+      path: /machine/network/interfaces/0
       value:
-        interfaces:
-          - interface: eth0
-            dhcp: true
+        interface: eth0
+        dhcp: true
 
     - op: replace
       path: /cluster/proxy/disabled
