--- a/k8s/clusters/sidero/manifests/default/sidero/clusters/cluster-0.yaml
+++ b/k8s/clusters/sidero/manifests/default/sidero/clusters/cluster-0.yaml
@@ -27,7 +27,7 @@ metadata:
   namespace: default
 spec:
   controlPlaneEndpoint:
-    host: 10.45.10.11
+    host: 10.20.50.10
     port: 6443
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1alpha3
@@ -56,8 +56,10 @@ spec:
           path: /machine/network
           value:
             interfaces:
-              - vip:
-                  ip: 10.45.10.11
+              - interface: eth0
+                dhcp: true
+                vip:
+                  ip: 10.20.50.10
       generateType: controlplane
       talosVersion: v0.14.0
     init:
@@ -66,8 +68,10 @@ spec:
           path: /machine/network
           value:
             interfaces:
-              - vip:
-                  ip: 10.45.10.11
+              - interface: eth0
+                dhcp: true
+                vip:
+                  ip: 10.20.50.10
       generateType: init
       talosVersion: v0.14.0
   infrastructureTemplate:
