--- a/k8s/clusters/sidero/manifests/default/sidero/serverclasses/cluster-0-control-plane.yaml
+++ b/k8s/clusters/sidero/manifests/default/sidero/serverclasses/cluster-0-control-plane.yaml
@@ -44,15 +44,9 @@ spec:
         servers:
           - 10.20.0.1
 
-    - op: add
-      path: /machine/network/interfaces/0
-      value:
-        interface: eth0
-        dhcp: true
-
-    - op: replace
-      path: /cluster/proxy/disabled
-      value: true
+    # - op: replace
+    #   path: /cluster/proxy/disabled
+    #   value: true
 
     - op: add
       path: /cluster/apiServer/extraArgs
@@ -64,12 +58,12 @@ spec:
       value:
         - k8s.holthome.net
 
-    - op: replace
-      path: /cluster/network/cni
-      value:
-        name: "custom"
-        urls:
-          - "https://raw.githubusercontent.com/carpenike/k8s-gitops/master/k8s/clusters/cluster-0/integrations/cilium-quick-install/quick-install.yaml"
+    # - op: replace
+    #   path: /cluster/network/cni
+    #   value:
+    #     name: "custom"
+    #     urls:
+    #       - "https://raw.githubusercontent.com/carpenike/k8s-gitops/master/k8s/clusters/cluster-0/integrations/cilium-quick-install/quick-install.yaml"
 
     - op: replace
       path: /cluster/extraManifests
