--- a/k8s/clusters/sidero/flux/repositories/git/k8s-gitops.yaml
+++ b/k8s/clusters/sidero/flux/repositories/git/k8s-gitops.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   interval: 1m0s
   ref:
-    branch: main
+    branch: master
   url: https://github.com/carpenike/k8s-gitops.git
   ignore: |
     # exclude all
