test deployment with more minimal settings

--- a/k8s/clusters/cluster-0/integrations/cilium-quick-install/quick-install.yaml
+++ b/k8s/clusters/cluster-0/integrations/cilium-quick-install/quick-install.yaml
@@ -130,8 +130,7 @@ data:
   enable-bandwidth-manager: "false"
   enable-local-redirect-policy: "false"
 
-  kube-proxy-replacement:  "strict"
-  kube-proxy-replacement-healthz-bind-address: ""
+  kube-proxy-replacement:  "disabled"
   enable-health-check-nodeport: "true"
   node-port-bind-protection: "true"
   enable-auto-protect-node-port-range: "true"
@@ -142,7 +141,9 @@ data:
   enable-well-known-identities: "false"
   enable-remote-node-identity: "true"
   operator-api-serve-addr: "127.0.0.1:9234"
-  ipam: "kubernetes"
+  ipam: "cluster-pool"
+  cluster-pool-ipv4-cidr: "10.0.0.0/8"
+  cluster-pool-ipv4-mask-size: "24"
   disable-cnp-status-updates: "true"
   cgroup-root: "/run/cilium/cgroupv2"
   enable-k8s-terminating-endpoint: "true"
