--- a/k8s/clusters/cluster-0/integrations/cilium-quick-install/values.yaml
+++ b/k8s/clusters/cluster-0/integrations/cilium-quick-install/values.yaml
@@ -1,5 +1,13 @@
+cluster:
+  name: "cluster-0"
+  id: "1"
+
+rollOutCiliumPods: true
+localRedirectPolicy: true
+
 # kubeProxyReplacement enables kube-proxy replacement in Cilium BPF datapath
 kubeProxyReplacement: "strict"
+kubeProxyReplacementHealthzBindAddr: 0.0.0.0:10256
 
 k8sServiceHost: cluster-0.holthome.net
 k8sServicePort: 6443
@@ -7,22 +15,27 @@ k8sServicePort: 6443
 ipam:
   #   # -- Configure IP Address Management mode.
   #   # ref: https://docs.cilium.io/en/stable/concepts/networking/ipam/
-  mode: "cluster-pool"
-  operator:
-    clusterPoolIPv4PodCIDR: 10.244.0.0/16
-    clusterPoolIPv4MaskSize: 24
+  mode: "kubernetes"
+
+operator:
+  rollOutPods: true
 
 # autoDirectNodeRoutes enables installation of PodCIDR routes between worker
 # nodes if worker nodes share a common L2 network segment.
 autoDirectNodeRoutes: true
+endpointRoutes:
+  enabled: true
+
+containerRuntime:
+  integration: containerd
 
 # nativeRoutingCIDR allows to explicitly specify the CIDR for native routing. This
 # value corresponds to the configured cluster-cidr.
-#nativeRoutingCIDR: 10.1.1.0/24
+nativeRoutingCIDR: 10.244.0.0/16
 
 # Cilium leverages MetalLB's simplified BGP announcement system for service type: LoadBalancer
 bgp:
-  enabled: false
+  enabled: true
   announce:
     loadbalancerIP: true
 
