--- a/k8s/clusters/sidero/manifests/default/sidero/serverclasses/cluster-0-worker.yaml
+++ b/k8s/clusters/sidero/manifests/default/sidero/serverclasses/cluster-0-worker.yaml
@@ -22,9 +22,7 @@ spec:
     - op: add
       path: /machine/time
       value:
-        disabled: false
-        servers:
-          - 10.20.0.1
+        disabled: true
 
     - op: add
       path: /machine/sysctls
