--- a/k8s/clusters/cluster-0/manifests/apps/kube-system/kustomization.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/kube-system/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - _pvc
+  - chrony
   - descheduler
   - goldilocks
   - kube-cleanup-operator
