--- a/k8s/clusters/cluster-0/flux/repositories/helm/kustomization.yaml
+++ b/k8s/clusters/cluster-0/flux/repositories/helm/kustomization.yaml
@@ -2,6 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ../../../../../global/flux/repositories/helm
   - ananace-charts.yaml
   - appscode-charts.yaml
   - authentik-charts.yaml
@@ -9,6 +10,7 @@ resources:
   - bitnami-charts.yaml
   - bitwardenrs-charts.yaml
   - charlie-haley-charts.yaml
+  - cilium-charts.yaml
   - codecentric-charts.yaml
   - coredns-charts.yaml
   - dacruz21-charts.yaml
