--- a/k8s/clusters/cluster-0/flux/vars/cluster-config.yaml
+++ b/k8s/clusters/cluster-0/flux/vars/cluster-config.yaml
@@ -14,8 +14,10 @@ data:
   # Networks
   NETWORK_SERVERS_CIDR: 10.1.1.0/24
   NETWORK_K8S_POD_CIDR: 10.244.0.0/16
-  NETWORK_K8S_SERVICE_CIDR: 10.96.0.0/12
   NETWORK_BGP_SVC_RANGE: 10.45.0.0/16
+  NETWORK_K8S_CLUSTER_CIDR: "10.42.0.0/16"
+  NETWORK_K8S_SERVICE_CIDR: "10.43.0.0/16"
+  NETWORK_MANAGEMENT_CIDR: "10.20.0.0/16"
 
   # Loadbalancer IP's
   LB_TRAEFIK: 10.45.0.1
@@ -25,3 +27,27 @@ data:
   LB_HASS: 10.45.0.11
   LB_PLEX: 10.45.0.20
   LB_MOSQUITTO: 10.45.0.10
+
+
+  # Router Gateway IP
+  GATEWAY_IP: "10.20.0.1"
+  # Service IPs
+  SVC_NGINX_ADDRESS: "10.45.10.10"
+  SVC_TRAEFIK_ADDRESS: "10.45.20.10"
+  #SVC_VERNEMQ_ADDRESS: "10.45.10.11"
+  SVC_MOSQUITTO_ADDRESS: "10.45.10.11"
+  SVC_GITEA_ADDRESS: "10.45.10.12"
+  SVC_ADGUARD_ADDRESS: "10.45.10.13"
+  SVC_BLOCKY_ADDRESS: "10.45.10.13"
+  SVC_INFLUXDB_ADDRESS: "10.45.10.15"
+  SVC_LOKI_ADDRESS: "10.45.10.16"
+  SVC_RESILIO_SYNC_ADDRESS: "10.45.10.18"
+  SVC_COREDNS_ADDRESS_EXTERNAL: "10.45.10.53"
+  SVC_COREDNS_ADDRESS_INTERNAL: "10.43.10.53"
+  SVC_PLEX_ADDRESS: "10.45.100.100"
+  SVC_OMADA_ADDRESS: "10.45.10.20"
+  SVC_QBITTORRENT_ADDRESS: "10.45.10.19"
+  VPN_PORT: "51820"
+  VPN_GATEWAY_VPN_PORT: "51820"
+  VPN_FORWARDED_PORT_1: "56059"
+  VPN_COUNTRY: CA
