--- a/k8s/clusters/cluster-0/flux/deploy/kustomization.yaml
+++ b/k8s/clusters/cluster-0/flux/deploy/kustomization.yaml
@@ -2,7 +2,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./cluster-repositories.yaml
-  - ./manage-flux.yaml
-  - ./cluster-config.yaml
-  - ./cluster-orchestration.yaml
+  - cluster-repositories.yaml
+  - manage-flux.yaml
+  - cluster-config.yaml
+  - cluster-namespaces.yaml
+  - cluster-orchestration.yaml
