--- a/k8s/clusters/cluster-0/flux/vars/cluster-config.yaml
+++ b/k8s/clusters/cluster-0/flux/vars/cluster-config.yaml
@@ -8,14 +8,13 @@ data:
   CLUSTER_NAME: cluster-0
   CLUSTER_ID: "1"
 
-  # Gateway IP's
-  GATEWAY_MANAGEMENT: 10.1.1.1
+  # Router Gateway IP
+  GATEWAY_IP: "10.20.0.1"
 
   # Networks
-  NETWORK_SERVERS_CIDR: 10.1.1.0/24
-  NETWORK_K8S_POD_CIDR: 10.244.0.0/16
-  NETWORK_BGP_SVC_RANGE: 10.45.0.0/16
-  NETWORK_K8S_CLUSTER_CIDR: "10.42.0.0/16"
+  NETWORK_SERVERS_CIDR: 10.20.0.0/16
+  NETWORK_BGP_SVC_CIDR: 10.45.0.0/16
+  NETWORK_K8S_POD_CIDR: "10.42.0.0/16"
   NETWORK_K8S_SERVICE_CIDR: "10.43.0.0/16"
   NETWORK_MANAGEMENT_CIDR: "10.20.0.0/16"
 
@@ -28,9 +27,6 @@ data:
   LB_PLEX: 10.45.0.20
   LB_MOSQUITTO: 10.45.0.10
 
-
-  # Router Gateway IP
-  GATEWAY_IP: "10.20.0.1"
   # Service IPs
   SVC_NGINX_ADDRESS: "10.45.10.10"
   SVC_TRAEFIK_ADDRESS: "10.45.20.10"
