--- a/k8s/clusters/sidero/manifests/default/sidero/clusters/cluster-0.yaml
+++ b/k8s/clusters/sidero/manifests/default/sidero/clusters/cluster-0.yaml
@@ -7,10 +7,13 @@ spec:
   clusterNetwork:
     pods:
       cidrBlocks:
-        - 10.244.0.0/16
+        - ${CLUSTER_0_POD_CIDR}
     services:
       cidrBlocks:
-        - 10.96.0.0/12
+        - ${CLUSTER_0_SVC_CIDR}
+  controlPlaneEndpoint:
+    host: cluster-0.${SECRET_DOMAIN}
+    port: 6443
   controlPlaneRef:
     apiVersion: controlplane.cluster.x-k8s.io/v1alpha3
     kind: TalosControlPlane
@@ -27,7 +30,7 @@ metadata:
   namespace: default
 spec:
   controlPlaneEndpoint:
-    host: 10.20.50.10
+    host: cluster-0.${SECRET_DOMAIN}
     port: 6443
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1alpha3
@@ -59,7 +62,7 @@ spec:
               - interface: eth0
                 dhcp: true
                 vip:
-                  ip: 10.20.50.10
+                  ip: ${CLUSTER_0_API_IP}
       generateType: controlplane
       talosVersion: v0.14.0
     init:
@@ -71,7 +74,7 @@ spec:
               - interface: eth0
                 dhcp: true
                 vip:
-                  ip: 10.20.50.10
+                  ip: ${CLUSTER_0_API_IP}
       generateType: init
       talosVersion: v0.14.0
   infrastructureTemplate:
