--- a/k8s/clusters/cluster-0/flux/orchestration/core-traefik.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/core-traefik.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   dependsOn:
     - name: cluster-namespaces
+    - name: core-crds
     - name: core-cilium
     - name: core-cert-manager
   interval: 5m
