--- a/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
@@ -3,5 +3,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - core-cert-manager.yaml
+  - core-certificates.yaml
   - core-cilium.yaml
   - core-traefik.yaml
