--- a/k8s/clusters/cluster-0/manifests/core/kube-system/chrony/daemonset.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/kube-system/chrony/daemonset.yaml
@@ -36,7 +36,7 @@ spec:
               protocol: UDP
           env:
             - name: NTP_SERVER
-              value: 10.20.0.1
+              value: ${GATEWAY_IP}
           readinessProbe:
             exec:
               command:
