--- a/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
@@ -4,5 +4,6 @@ kind: Kustomization
 resources:
   - core-cert-manager.yaml
   - core-certificates.yaml
+  - core-chrony.yaml
   - core-cilium.yaml
   - core-traefik.yaml
