--- a/k8s/global/flux/vars/global-secrets.sops.yaml
+++ b/k8s/global/flux/vars/global-secrets.sops.yaml
@@ -5,14 +5,17 @@ metadata:
   namespace: flux-system
 stringData:
   SECRET_DOMAIN: ENC[AES256_GCM,data:+FHCebILaRlTMW+6,iv:a1fu33ZRMk3U3Iz233uhKv69dvLh4TmLJItWkZY/NKc=,tag:ln+FCORqGaPhQU41+Q1ZkQ==,type:str]
+  SECRET_SHORT_DOMAIN: ENC[AES256_GCM,data:Dk/gvyfuzg==,iv:HPnIGE0EMyLCjyTZH5fNXK2rAjhgSIPJV6qTkD1pmQE=,tag:qzj59RUIcwRoRxWXbYAJRA==,type:str]
+  SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:C4eVcgKLcHEN5DC1,iv:gtaAqtZvJH42r/4dvrajCsOvf6X6FiALUOgmSNo6nFg=,tag:VxsDvfls+jwNhBvvYeJpIQ==,type:str]
+  SECRET_EMAIL: ENC[AES256_GCM,data:ZjAH2q0+QSmHAX50crkYTew=,iv:GkMEQd685f1oFxmafGeOZBh95J9caBZge9h3y7UluSU=,tag:q6yzRCFM9Cy2420mAJizrQ==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-12-29T03:45:08Z"
-  mac: ENC[AES256_GCM,data:ZjROzlkjicCmYlrRKR0L77AyGfBe5tVHlL5trFDyxmiAdMyxVcmMKHepE3SFiHOM7TT5EmMQv45O4bH8OUm4KWlqYTcoO25N3sA+sfULo9i+f5HMpmMfvyPPvaLyIi10em4G/3L7w2VtydyXxrqqNJhvfSjCIyBTob8z61BMsgA=,iv:HBc7IfOfG/7JSUhjf+vHDesVxwhx2779bve4dwI8Ssc=,tag:y+3J5Uw6+1Ykpx6iMPSchw==,type:str]
+  lastmodified: "2021-12-29T05:13:36Z"
+  mac: ENC[AES256_GCM,data:h2iAB/ZVmKF/RH96IKa+K2TURjXyqJ5HKLBHyjISIUuXUxH+802vMvZvL/YTMhk1CA7+WWVRnffwG6ENjpnUW7ZKzX9WyjP0WwwJEDIqPi6a/nvZYuxX7RdNXjnagOu+NLtP+rKGZhq6JFdHiaANsPyboF78EGaajeAJ0usIAs0=,iv:uTA0OLafS1mgFHbcrtw9CSlI9DA5tZwqDtSTaayRO+o=,tag:NfLDfYtwmJTWsM8QeEWAhg==,type:str]
   pgp:
     - created_at: "2021-12-29T03:44:48Z"
       enc: |
