well that was really dumb

--- a/k8s/clusters/cluster-0/manifests/core/certificates/certificate.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/certificates/certificate.yaml
@@ -10,8 +10,8 @@ spec:
   dnsNames:
     - "${SECRET_DOMAIN}"
     - "*.${SECRET_DOMAIN}"
-    - "SECRET_PUBLIC_DOMAIN"
-    - "*.SECRET_PUBLIC_DOMAIN"
+    - "${SECRET_PUBLIC_DOMAIN}"
+    - "*.${SECRET_PUBLIC_DOMAIN}"
   issuerRef:
     name: letsencrypt-production
     kind: ClusterIssuer
