move flux add-ons configuration

--- a/k8s/clusters/cluster-0/manifests/apps/flux-system/add-ons/notifications/discord/secret.sops.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/flux-system/add-ons/notifications/discord/secret.sops.yaml
@@ -1,19 +1,19 @@
----
 apiVersion: v1
 data:
   address: ENC[AES256_GCM,data:hFviBZKPH6BnKL0zKkuIUKfbN28nC4Ap/GGoOmPn5FWfEPD8DstUeQnwr7pn+wXHNpwOU9tf1fPENSRAcVuZnMbAcxbmRoZAA0R97102mCc8fwnkchLIav6Li8UKS6jM53S99kOFTSsl0azGcd1Yd1XeI6CfGLBrGKj9FULAMx28MMcIWikYi2GXqIA4kRsHJ0bG6s+kZSj9Wrju+S6DbA==,iv:btVJGPpqhQIa6MF2cshCuPF4KvjyphIkbioAr5pobLM=,tag:MSvyZoaQ6uvmlstDfC6IKA==,type:str]
 kind: Secret
 metadata:
   creationTimestamp: null
-  name: flux-discord-address
+  name: discord-webhook-url
   namespace: flux-system
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
-  lastmodified: "2021-02-25T19:11:10Z"
-  mac: ENC[AES256_GCM,data:Z1WLBa21EzP2h8P1R2Ff9RxTtx39/OZmwNyLs/+zN03w66Cxh60G2NWRkKnYTwQWrpJvWzAHlt8jnd5c8nQiVbe3fF4G0oVSts1bpZTiRdVao/DRC/0mLrXLojPiUYOqWhFTVStkjr70s0ncLaDjvQsefHJn0LoDJlcs5KXNkvQ=,iv:8PZxojbGmsD2fBPPV5kPw2+XgROgUQYetGKtSaNYC9Y=,tag:qa9eY0q8g3wsO/xunqYNdQ==,type:str]
+  age: []
+  lastmodified: "2021-12-29T16:28:00Z"
+  mac: ENC[AES256_GCM,data:stsJ2BvBNpHfvGSkQF1uZEtEnsUMMDAVz2qX9vWDsRpYT9hjScoSxFczU8vk3RF3x2/k/LJLnSGOEGO/odeL1X8whO0hR5Do/m9w64AIqP3BiACbQXeTVg0QdBFD11WrtxFkfDWu47oSkeC3ijLnv6NNcvEIKjmNfUTISHwmcRE=,iv:ElIRDGlofvdOE+yuZhIOlWW8ONlJV8FnZH8HXGNCMIw=,tag:Cwb8Md5A+Hxqzc5DFn85AQ==,type:str]
   pgp:
     - created_at: "2021-02-25T19:11:09Z"
       enc: |
@@ -56,4 +56,4 @@ sops:
         -----END PGP MESSAGE-----
       fp: 76DAFEBE0E21604BB9F2D6C11850C928A0D756C8
   encrypted_regex: ^(data|stringData)$
-  version: 3.6.1
+  version: 3.7.1
