--- a/k8s/clusters/cluster-0/manifests/apps/flux-system/add-ons/webhook/github/secret.sops.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/flux-system/add-ons/webhook/github/secret.sops.yaml
@@ -3,7 +3,7 @@ data:
   token: ENC[AES256_GCM,data:PEdHCkWR3kP0h/h6LjyHLnfw3aY5kkheEJZ1j+fVxaUS5Vx8dzNaj4PVwFJT8id5DsDEgJfXpQI=,iv:TEm7jedyvXtsY0u5lsyzTW14CBiHZ0aJjX8qyyVR2so=,tag:1wLfJ0YOQgZpalxS1ao5nA==,type:str]
 kind: Secret
 metadata:
-  name: webhook-token
+  name: github-webhook-token
   namespace: flux-system
 type: Opaque
 sops:
@@ -11,8 +11,9 @@ sops:
   gcp_kms: []
   azure_kv: []
   hc_vault: []
-  lastmodified: "2021-03-11T15:40:15Z"
-  mac: ENC[AES256_GCM,data:3Y0aYGoKplykPbVBbUOZmq1siVpMaLYsn+HnC4FrGXm9pAXj85BQZ1F57B4nyghp+EfQ8mZs+trSUuQsmsS6HLWh2I3vqGa5vAPtPXXKx+mD7lBuFcoG7xIkSkHa79NlOZRyiYBkOSNrzyZ4mwJTgwbSI0bTx1LeHPCl4bSt7A8=,iv:tl3qOsmriAjiAYaa2Gi5xlqIYCcNm4+i2CPN1qhbjD8=,tag:vmye8y25f0HEFqtQdYivMg==,type:str]
+  age: []
+  lastmodified: "2021-12-29T16:29:45Z"
+  mac: ENC[AES256_GCM,data:52+O/qwYn0HaxjUQ+G6ArBGTzNuPTVbtiKF5BgqWdKRFsLiONxCDTOZrDraR5gD0tWJEez75TisC+4aK3voblqQ9jh2VY3gZHdlR5HQ5jidhrRPoO98TeHBdN38Br0SF83FZLJq4K2iRM0l71+R1C36HZwG59ceRymuL3l4nVHk=,iv:Dx+CSPO9iGI1KZaWkoBkTGMACJMgdNGWSY6rSR3zdcg=,tag:Wq3kfBGAb1sOv2PBGndGbg==,type:str]
   pgp:
     - created_at: "2021-03-11T15:40:14Z"
       enc: |
@@ -55,4 +56,4 @@ sops:
         -----END PGP MESSAGE-----
       fp: 76DAFEBE0E21604BB9F2D6C11850C928A0D756C8
   encrypted_regex: ^(data|stringData)$
-  version: 3.6.1
+  version: 3.7.1
