--- a/k8s/clusters/cluster-0/manifests/core/network/error-pages/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/network/error-pages/helm-release.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 5m
   chart:
     spec:
-      chart: /charts/kah-common/
+      chart: /k8s/charts/kah-common/
       sourceRef:
         kind: GitRepository
         name: flux-system
