update namespace information

--- a/k8s/clusters/cluster-0/manifests/core/network/error-pages/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/network/error-pages/helm-release.yaml
@@ -8,10 +8,10 @@ spec:
   interval: 5m
   chart:
     spec:
-      chart: /k8s/charts/kah-common/
+      chart: /k8s/charts/kah-common-chart/
       sourceRef:
         kind: GitRepository
-        name: flux-system
+        name: k8s-gitops
         namespace: flux-system
       interval: 5m
   dependsOn:
