--- a/k8s/clusters/cluster-0/manifests/core/backup-system/benji/kustomization.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/backup-system/benji/kustomization.yaml
@@ -8,3 +8,12 @@ resources:
   - keyring-secret.enc.yaml
   - backup-pgsql-cronjob.yaml
   - service-monitor.yaml
+configMapGenerator:
+  - name: ceph-config
+    namespace: backup-system
+    files:
+      - ceph/generate-ceph.sh
+generatorOptions:
+  disableNameSuffixHash: true
+  annotations:
+    kustomize.toolkit.fluxcd.io/substitute: disabled
